Add header component with routing

--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -8,3 +8,13 @@
 a {
   color: #ffffff;
 }
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+nav a {
+  margin: 0 0.5rem;
+}
