Add basic cart component

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,6 +3,7 @@
   <nav>
     <ul>
       <li><a routerLink="">Product List</a></li>
+      <li><a routerLink="/cart">Cart</a></li>
     </ul>
   </nav>
 </div>
