--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -7,25 +7,6 @@ img {
   margin-bottom: 12px;
 }
 
-.cart-item {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-}
-
-.cart-item-details {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: left;
-  margin-left: 80px;
-}
-
-.number-input {
-  width: 80px;
-  text-align: center;
-}
-
 .cart-container {
   display: flex;
   flex-direction: row;
@@ -42,4 +23,9 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 64px;
+}
+
+.empty-cart-message a {
+  display: inline-block;
+  margin-left: 5px;
 }
