--- a/src/app/components/cart-item/cart-item.component.css
+++ b/src/app/components/cart-item/cart-item.component.css
@@ -16,3 +16,15 @@
   width: 80px;
   text-align: center;
 }
+
+.cart-item-image {
+  list-style-type: none;
+  width: 290px;
+  padding: 20px;
+  margin: 6px 6px;
+  border: 1px solid #33B5E5;
+}
+
+.remove-cart {
+  margin-top: 1rem
+}
