--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div class="product-container">
   <img class="product-image" alt="{{product.name}}" src="{{product.url}}">
 
-  <div>{{product.name}}</div>
+  <h3>{{product.name}}</h3>
   <p>{{product.price}} &euro;</p>
   <p>{{product.description}}</p>
 
