--- a/src/app/components/product-item-detail/product-item-detail.component.css
+++ b/src/app/components/product-item-detail/product-item-detail.component.css
@@ -4,7 +4,7 @@ img {
 }
 
 .select-input {
-  width: 108px; 
+  width: 108px;
   margin-bottom: 8px;
 }
 
@@ -21,5 +21,6 @@ img {
 }
 
 .back-link {
+  display: block;
   margin-top: 8px;
 }
