--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,11 +1,17 @@
 <div class="cart-container">
   <div class="cart-panel" *ngIf="cart.length > 0">
-    <app-cart-item *ngFor="let product of cart" [product]="product" (removeFromCartClicked)="removeItemFromCart($event)"></app-cart-item>
+    <app-cart-item
+      *ngFor="let product of cart"
+      [product]="product"
+      (removeFromCartClicked)="removeItemFromCart($event)"
+      (updateQuantityClicked)="updateQuantity($event)"
+    ></app-cart-item>
+    <h3>Total: ${{total}}</h3>
+  </div>
+  <div class="cart-panel" *ngIf="cart.length > 0">
+    formular
   </div>
   <div class="empty-cart-message" *ngIf="cart.length === 0">
     This cart is empty! Try adding products from the <a routerLink="">Product List</a>.
-  </div>
-  <div class="cart-panel">
-    formular
   </div>
 </div>
