--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -9,7 +9,9 @@
     <h3>Total: ${{total}}</h3>
   </div>
   <div class="cart-panel" *ngIf="cart.length > 0">
-    formular
+    <app-register
+      (registeredCustomer)="registeredCustomer($event)"
+    ></app-register>
   </div>
   <div class="empty-cart-message" *ngIf="cart.length === 0">
     This cart is empty! Try adding products from the <a routerLink="">Product List</a>.
