--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,17 +1,17 @@
 <form (ngSubmit)="registerCustomerSubmit()" #form="ngForm">
   <div class="form-margin">
     <label for="fullName">Full name</label>
-    <input type="text" name="fullName" [(ngModel)]="customer.fullName" id="fullName" min="3" placeholder="(Minimum 3 characters)" required>
+    <input type="text" name="fullName" [(ngModel)]="customer.fullName" (ngModelChange)="customer.fullName = $event" id="fullName" min="3" placeholder="(Minimum 3 characters)" required>
   </div>
 
   <div class="form-margin">
     <label for="address">Address</label>
-    <input type="text" name="address" [(ngModel)]="customer.address" id="address" min="3" placeholder="(Minimum 6 characters)" required>
+    <input type="text" name="address" [(ngModel)]="customer.address" (ngModelChange)="customer.address = $event" id="address" min="3" placeholder="(Minimum 6 characters)" required>
   </div>
 
   <div class="form-margin">
     <label for="creditCard">Credit card</label>
-    <input type="number" name="creditCard" [(ngModel)]="customer.creditCard" id="creditCard" min="1000000000000000" max="9999999999999999" placeholder="(16-digit number)" required>
+    <input type="number" name="creditCard" [(ngModel)]="customer.creditCard" (ngModelChange)="customer.creditCard = $event" id="creditCard" min="1000000000000000" max="9999999999999999" placeholder="(16-digit number)" required>
   </div>
 
   <div class="form-margin">
