Add cart register name validation

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,8 @@
 <form (ngSubmit)="registerCustomerSubmit()" #form="ngForm">
   <div class="form-margin">
     <label for="fullName">Full name</label>
-    <input type="text" name="fullName" [(ngModel)]="customer.fullName" (ngModelChange)="customer.fullName = $event" id="fullName" min="3" placeholder="(Minimum 3 characters)" required>
+    <input type="text" name="fullName" [(ngModel)]="customer.fullName" (ngModelChange)="checkValidName($event)" id="fullName" min="3" placeholder="(Minimum 3 characters)" required>
+    <div class="error" *ngIf="!isNameValid">Name cannot have special characters in it.</div>
   </div>
 
   <div class="form-margin">
